# wofi-power-menu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  KEYS  LICENSE  README.md  flake.nix
.github/: release.yml
.github/workflows/: ci.yml  release.yml
src/: cmd.rs  icons.rs  lib.rs  main.rs  power_menu.rs  utils.rs  wofi.rs
